clean up and updated

--- a/src/notebooks/data/Generate_DoB_PhoneNumbers_ETC.ipynb
+++ b/src/notebooks/data/Generate_DoB_PhoneNumbers_ETC.ipynb
@@ -5,8 +5,7 @@
    "id": "d1afb0d6",
    "metadata": {},
    "source": [
-    "# Generate Customer Sample Data\n",
-    "\n",
+    "# Generate Customer Sample Data - Types, Phone Numbers \n",
     "## Overview\n",
     "This notebook generates sample data for the Customer table with specific field distributions and business rules.\n",
     "\n",
@@ -19,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a11d0870",
    "metadata": {},
    "outputs": [
@@ -142,7 +141,7 @@
     "    probabilities = [0.2, 0.35, 0.45]\n",
     "    return np.random.choice(relationship_types, size=num_records, p=probabilities)\n",
     "\n",
-    "# 7. Generate PrimaryPhone (100% of records)\n",
+    "# 7. Generate PrimaryPhone (100% of records, US only)\n",
     "def generate_primary_phone(num_records):\n",
     "    phone_numbers = []\n",
     "    \n",
@@ -168,34 +167,20 @@
     "        972, 973, 978, 979, 980, 984, 985, 989\n",
     "    ]\n",
     "    \n",
-    "    # International country codes for non-US numbers\n",
-    "    intl_country_codes = ['+44', '+33', '+49', '+39', '+34', '+61', '+81', '+86', '+91', '+55']\n",
-    "    \n",
-    "    # Counter for sequential international numbers\n",
-    "    intl_counter = 1000000\n",
-    "    \n",
     "    for i in range(num_records):\n",
-    "        # 85% US numbers, 15% international\n",
-    "        if np.random.random() < 0.85:\n",
-    "            # US number with area code + 555-01XX format\n",
-    "            area_code = np.random.choice(na_area_codes)\n",
-    "            last_two_digits = np.random.randint(0, 100)  # 00-99 for 555-0100 to 555-0199\n",
-    "            phone = f\"({area_code}) 555-01{last_two_digits:02d}\"\n",
-    "        else:\n",
-    "            # International number with country code + sequential number\n",
-    "            country_code = np.random.choice(intl_country_codes)\n",
-    "            phone = f\"{country_code} {intl_counter}\"\n",
-    "            intl_counter += 1\n",
-    "        \n",
+    "        # US number with area code + 555-01XX format (fake but realistic)\n",
+    "        area_code = np.random.choice(na_area_codes)\n",
+    "        last_two_digits = np.random.randint(0, 100)  # 00-99 for 555-0100 to 555-0199\n",
+    "        phone = f\"({area_code}) 555-01{last_two_digits:02d}\"\n",
     "        phone_numbers.append(phone)\n",
     "    \n",
     "    return phone_numbers\n",
     "\n",
-    "# 8. Generate SecondaryPhone (30% of records have secondary phone)\n",
+    "# 8. Generate SecondaryPhone (30% of records have secondary phone, US only)\n",
     "def generate_secondary_phone(num_records):\n",
     "    phone_numbers = []\n",
     "    \n",
-    "    # Valid North American area codes (excluding 800, 866, 877, 888, 900)\n",
+    "    # Same US area codes as primary\n",
     "    na_area_codes = [\n",
     "        201, 202, 203, 205, 206, 207, 208, 209, 210, 212, 213, 214, 215, 216, 217, 218, 219,\n",
     "        224, 225, 228, 229, 231, 234, 239, 240, 248, 251, 252, 253, 254, 256, 260, 262, 267,\n",
@@ -217,26 +202,13 @@
     "        972, 973, 978, 979, 980, 984, 985, 989\n",
     "    ]\n",
     "    \n",
-    "    # International country codes for non-US numbers\n",
-    "    intl_country_codes = ['+44', '+33', '+49', '+39', '+34', '+61', '+81', '+86', '+91', '+55']\n",
-    "    \n",
-    "    # Counter for sequential international numbers (start higher to avoid duplicates with primary)\n",
-    "    intl_counter = 2000000\n",
-    "    \n",
     "    for i in range(num_records):\n",
     "        # 30% chance of having a secondary phone\n",
     "        if np.random.random() < 0.3:\n",
-    "            # 85% US numbers, 15% international\n",
-    "            if np.random.random() < 0.85:\n",
-    "                # US number with area code + 555-01XX format\n",
-    "                area_code = np.random.choice(na_area_codes)\n",
-    "                last_two_digits = np.random.randint(0, 100)  # 00-99 for 555-0100 to 555-0199\n",
-    "                phone = f\"({area_code}) 555-01{last_two_digits:02d}\"\n",
-    "            else:\n",
-    "                # International number with country code + sequential number\n",
-    "                country_code = np.random.choice(intl_country_codes)\n",
-    "                phone = f\"{country_code} {intl_counter}\"\n",
-    "                intl_counter += 1\n",
+    "            # US number with area code + 555-02XX format (different from primary)\n",
+    "            area_code = np.random.choice(na_area_codes)\n",
+    "            last_two_digits = np.random.randint(0, 100)  # 00-99 for 555-0200 to 555-0299\n",
+    "            phone = f\"({area_code}) 555-02{last_two_digits:02d}\"\n",
     "            phone_numbers.append(phone)\n",
     "        else:\n",
     "            phone_numbers.append(None)  # No secondary phone\n",
@@ -272,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "2469d760",
    "metadata": {},
    "outputs": [
@@ -313,27 +285,25 @@
       "  Standard: 250 ( 48.7%)\n",
       "\n",
       "🎯 PrimaryPhone Distribution:\n",
-      "  US Numbers      : 451 ( 87.9%)\n",
-      "  International   :  62 ( 12.1%)\n",
+      "  US Numbers      : 513 (100.0%)\n",
       "\n",
       "🎯 SecondaryPhone Distribution:\n",
-      "  Has Secondary   : 157 ( 30.6%)\n",
-      "  No Secondary    : 356 ( 69.4%)\n",
-      "  US Numbers      : 140 ( 89.2% of secondary)\n",
-      "  International   :  17 ( 10.8% of secondary)\n",
+      "  Has Secondary   : 136 ( 26.5%)\n",
+      "  No Secondary    : 377 ( 73.5%)\n",
+      "  US Numbers      : 136 (100.0% of secondary)\n",
       "\n",
       "📋 First 10 Sample Records:\n",
       "CustomerTypeId  IsActive DateOfBirth CustomerEstablishedDate CreatedBy CustomerRelationshipTypeId   PrimaryPhone SecondaryPhone\n",
-      "    Individual     False  1969-03-18              2022-12-28     Sales                        VIP (610) 555-0104           None\n",
-      "    Government      True  1969-01-14              2023-04-03     Sales                   Standard (951) 555-0179           None\n",
-      "      Business      True  1973-12-28              2024-02-21     Sales                   Standard (628) 555-0175           None\n",
-      "    Individual      True  2005-05-11              2020-10-31     Sales                        VIP    +55 1000000           None\n",
-      "    Individual     False  1953-07-12              2021-11-04     Sales                    Premium (575) 555-0186           None\n",
-      "    Individual     False  1952-01-04              2020-12-30     Sales                    Premium (678) 555-0154           None\n",
-      "    Individual      True  1983-02-01              2025-02-20     Sales                        VIP (860) 555-0188           None\n",
-      "      Business      True  1966-12-30              2022-03-31     Sales                    Premium (607) 555-0188           None\n",
-      "    Individual      True  1973-10-02              2023-11-03     Sales                    Premium    +39 1000001           None\n",
-      "      Business     False  1953-02-03              2020-12-08     Sales                    Premium (980) 555-0114           None\n",
+      "    Individual     False  1969-03-18              2022-12-28     Sales                        VIP (772) 555-0166           None\n",
+      "    Government      True  1969-01-14              2023-04-03     Sales                   Standard (610) 555-0104           None\n",
+      "      Business      True  1973-12-28              2024-02-21     Sales                   Standard (725) 555-0157           None\n",
+      "    Individual      True  2005-05-11              2020-10-31     Sales                        VIP (951) 555-0179           None\n",
+      "    Individual     False  1953-07-12              2021-11-04     Sales                    Premium (504) 555-0114           None\n",
+      "    Individual     False  1952-01-04              2020-12-30     Sales                    Premium (628) 555-0175           None\n",
+      "    Individual      True  1983-02-01              2025-02-20     Sales                        VIP (475) 555-0152           None\n",
+      "      Business      True  1966-12-30              2022-03-31     Sales                    Premium (307) 555-0125 (832) 555-0254\n",
+      "    Individual      True  1973-10-02              2023-11-03     Sales                    Premium (667) 555-0133           None\n",
+      "      Business     False  1953-02-03              2020-12-08     Sales                    Premium (575) 555-0186           None\n",
       "\n",
       "💾 SAVED TO: C:\\temp\\samples\\Customer_samples.csv\n",
       "📊 Total Records: 513\n",
@@ -407,20 +377,16 @@
     "# Phone Number Distribution Analysis\n",
     "print(\"\\n🎯 PrimaryPhone Distribution:\")\n",
     "us_primary = len([p for p in df['PrimaryPhone'] if p.startswith('(')])\n",
-    "intl_primary = len([p for p in df['PrimaryPhone'] if p.startswith('+')])\n",
-    "print(f\"  US Numbers      : {us_primary:3d} ({us_primary/len(df)*100:5.1f}%)\")\n",
-    "print(f\"  International   : {intl_primary:3d} ({intl_primary/len(df)*100:5.1f}%)\")\n",
+    "print(f\"  US Numbers      : {us_primary:3d} (100.0%)\")\n",
     "\n",
     "print(\"\\n🎯 SecondaryPhone Distribution:\")\n",
     "secondary_count = len([p for p in df['SecondaryPhone'] if p is not None])\n",
     "secondary_null = len([p for p in df['SecondaryPhone'] if p is None])\n",
     "us_secondary = len([p for p in df['SecondaryPhone'] if p is not None and p.startswith('(')])\n",
-    "intl_secondary = len([p for p in df['SecondaryPhone'] if p is not None and p.startswith('+')])\n",
     "print(f\"  Has Secondary   : {secondary_count:3d} ({secondary_count/len(df)*100:5.1f}%)\")\n",
     "print(f\"  No Secondary    : {secondary_null:3d} ({secondary_null/len(df)*100:5.1f}%)\")\n",
     "if secondary_count > 0:\n",
-    "    print(f\"  US Numbers      : {us_secondary:3d} ({us_secondary/secondary_count*100:5.1f}% of secondary)\")\n",
-    "    print(f\"  International   : {intl_secondary:3d} ({intl_secondary/secondary_count*100:5.1f}% of secondary)\")\n",
+    "    print(f\"  US Numbers      : {us_secondary:3d} (100.0% of secondary)\")\n",
     "\n",
     "# Display sample records\n",
     "print(f\"\\n📋 First 10 Sample Records:\")\n",
