--- a/src/notebooks/schema/Customer_Product_Order_Simplified_12.ipynb
+++ b/src/notebooks/schema/Customer_Product_Order_Simplified_12.ipynb
@@ -116,16 +116,17 @@
     "    LocationId STRING,\n",
     "    LocationName STRING,\n",
     "    IsActive BOOLEAN,\n",
-    "    LocationAddressLine1 STRING,\n",
-    "    LocationAddressLine2 STRING,\n",
-    "    LocationCity STRING,\n",
-    "    LocationStateId STRING,\n",
-    "    LocationZipCode STRING,\n",
+    "    AddressLine1 STRING,  -- \"1000 Main St\" \n",
+    "    AddressLine2 STRING,  -- \"Apt 5\" or \"Suite 200\"\n",
+    "    City STRING,\n",
+    "    StateId STRING,\n",
+    "    ZipCode STRING,\n",
     "    CountryId STRING,\n",
-    "    SubdivisionId STRING,\n",
-    "    LocationLatitude DECIMAL(10,7),\n",
-    "    LocationLongitude DECIMAL(10,7),\n",
-    "    LocationNote STRING\n",
+    "    SubdivisionName STRING,\n",
+    "    Region STRING,        -- \"Northeast\", \"West Coast\", \"Midwest\"\n",
+    "    Latitude DECIMAL(10,7),\n",
+    "    Longitude DECIMAL(10,7),\n",
+    "    Note STRING\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
