Product Data Generated

--- a/src/notebooks/data/Generate_Product_Enriched_Samples.ipynb
+++ b/src/notebooks/data/Generate_Product_Enriched_Samples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71d4f224",
+   "id": "3d56f323",
    "metadata": {},
    "source": [
     "# Generate Enriched Product Sample Data\n",
@@ -18,30 +18,55 @@
     "- **Product_Samples.csv**: Enriched product data with CategoryName filled in\n",
     "\n",
     "## Process\n",
-    "1. Read both input files from C:\\temp\\samples\n",
+    "1. Read both input files\n",
     "2. Perform lookup/merge on CategoryID\n",
-    "3. Generate enriched output file with all original data + CategoryName\n",
+    "3. Generate enriched output file\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbbdffb9",
+   "execution_count": 8,
+   "id": "30e3e036",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🗑️ Removed existing file: C:\\temp\\samples\\Product_samples.csv\n",
-      "🎯 GENERATING PRODUCT SAMPLE DATA\n",
-      "Sample Size: 295\n",
-      "Output: C:\\temp\\samples\\Product_samples.csv\n",
-      "==================================================\n",
-      "🔄 Generating field data...\n",
-      "✅ Data generation complete!\n"
+      "🎯 ENRICHING PRODUCT DATA WITH CATEGORY NAMES\n",
+      "Input Folder: C:\\temp\\samples\n",
+      "Product Input: Product_Input.csv\n",
+      "Category Lookup: ProductCategory_48.csv\n",
+      "Output: Product_Samples.csv\n",
+      "============================================================\n",
+      "📂 Reading product input: C:\\temp\\samples\\Product_Input.csv\n",
+      "✅ Product file read successfully!\n",
+      "📊 Shape: (315, 8)\n",
+      "📋 Columns: ['ProductID', 'Name', 'Color', 'StandardCost', 'ListPrice', 'Size', 'Weight', 'CategoryID']\n",
+      "\n",
+      "📂 Reading category lookup: C:\\temp\\samples\\ProductCategory_48.csv\n",
+      "✅ Category file read successfully!\n",
+      "📊 Shape: (48, 2)\n",
+      "📋 Columns: ['CategoryID', 'CategoryName']\n",
+      "\n",
+      "📖 Sample Product Data (First 5 rows):\n",
+      "   ProductID                       Name  Color  StandardCost  ListPrice Size   Weight  CategoryID\n",
+      "0          1  HL Road Frame - Black, 58  Black     1059.3100    1431.50   58  1016.04          18\n",
+      "1          2    HL Road Frame - Red, 58    Red     1059.3100    1431.50   58  1016.04          18\n",
+      "2          3      Sport-100 Helmet, Red    Red       13.0863      34.99  NaN      NaN          35\n",
+      "3          4    Sport-100 Helmet, Black  Black       13.0863      34.99  NaN      NaN          35\n",
+      "4          5     Mountain Bike Socks, M  White        3.3963       9.50    M      NaN          27\n",
+      "\n",
+      "📖 Sample Category Data (First 5 rows):\n",
+      "   CategoryID    CategoryName\n",
+      "0           1           Bikes\n",
+      "1           2      Components\n",
+      "2           3        Clothing\n",
+      "3           4     Accessories\n",
+      "4           5  Mountain Bikes\n",
+      "✅ Input files loaded successfully!\n"
      ]
     }
    ],
@@ -49,8 +74,8 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Configuration\n",
-    "INPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
+    "# Configuration - using the correct absolute path where files exist\n",
+    "INPUT_FOLDER = \"C:\\\\temp\\\\samples\"  # Your files are here\n",
     "PRODUCT_INPUT_FILE = \"Product_Input.csv\"\n",
     "CATEGORY_LOOKUP_FILE = \"ProductCategory_48.csv\"\n",
     "OUTPUT_FILE = \"Product_Samples.csv\"\n",
@@ -66,15 +91,39 @@
     "    # Read Product Input file\n",
     "    product_input_path = os.path.join(INPUT_FOLDER, PRODUCT_INPUT_FILE)\n",
     "    print(f\"📂 Reading product input: {product_input_path}\")\n",
+    "    \n",
+    "    if not os.path.exists(product_input_path):\n",
+    "        print(f\"❌ File not found: {product_input_path}\")\n",
+    "        # List what files are actually in the directory\n",
+    "        if os.path.exists(INPUT_FOLDER):\n",
+    "            files_in_folder = os.listdir(INPUT_FOLDER)\n",
+    "            print(f\"📁 Files found in {INPUT_FOLDER}:\")\n",
+    "            for file in files_in_folder:\n",
+    "                print(f\"   - {file}\")\n",
+    "        else:\n",
+    "            print(f\"📁 Directory {INPUT_FOLDER} does not exist\")\n",
+    "        raise FileNotFoundError(f\"Product_Input.csv not found in {INPUT_FOLDER}\")\n",
+    "    \n",
     "    df_products = pd.read_csv(product_input_path)\n",
     "    \n",
     "    print(f\"✅ Product file read successfully!\")\n",
     "    print(f\"📊 Shape: {df_products.shape}\")\n",
     "    print(f\"📋 Columns: {list(df_products.columns)}\")\n",
     "    \n",
+    "    # Check if CategoryName already exists and remove it (it has NaN values)\n",
+    "    if 'CategoryName' in df_products.columns:\n",
+    "        print(f\"🔄 Found existing CategoryName column in Product_Input.csv - removing it\")\n",
+    "        df_products = df_products.drop(columns=['CategoryName'])\n",
+    "        print(f\"✅ Removed CategoryName column. New columns: {list(df_products.columns)}\")\n",
+    "    \n",
     "    # Read Category Lookup file\n",
     "    category_lookup_path = os.path.join(INPUT_FOLDER, CATEGORY_LOOKUP_FILE)\n",
     "    print(f\"\\n📂 Reading category lookup: {category_lookup_path}\")\n",
+    "    \n",
+    "    if not os.path.exists(category_lookup_path):\n",
+    "        print(f\"❌ File not found: {category_lookup_path}\")\n",
+    "        raise FileNotFoundError(f\"ProductCategory_48.csv not found in {INPUT_FOLDER}\")\n",
+    "    \n",
     "    df_categories = pd.read_csv(category_lookup_path)\n",
     "    \n",
     "    print(f\"✅ Category file read successfully!\")\n",
@@ -83,16 +132,20 @@
     "    \n",
     "    # Display sample data\n",
     "    print(f\"\\n📖 Sample Product Data (First 5 rows):\")\n",
-    "    print(df_products.head())\n",
+    "    print(df_products.head().to_string())\n",
     "    \n",
     "    print(f\"\\n📖 Sample Category Data (First 5 rows):\")\n",
-    "    print(df_categories.head())\n",
+    "    print(df_categories.head().to_string())\n",
     "    \n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Error reading input files: {e}\")\n",
+    "except FileNotFoundError as e:\n",
+    "    print(f\"❌ File not found: {e}\")\n",
     "    print(\"\\n💡 Please ensure both files exist in C:\\\\temp\\\\samples:\")\n",
     "    print(\"   - Product_Input.csv\")\n",
     "    print(\"   - ProductCategory_48.csv\")\n",
+    "    raise\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error reading input files: {e}\")\n",
+    "    print(f\"Error type: {type(e).__name__}\")\n",
     "    raise\n",
     "\n",
     "print(\"✅ Input files loaded successfully!\")"
@@ -100,8 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b8c7180b",
+   "execution_count": 9,
+   "id": "ef3d57a4",
    "metadata": {},
    "outputs": [
     {
@@ -109,45 +162,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📊 DATA DISTRIBUTION ANALYSIS\n",
+      "🔄 PERFORMING CATEGORY LOOKUP\n",
       "==================================================\n",
+      "✅ Using CategoryID for lookup\n",
+      "✅ Using 'CategoryName' as CategoryName\n",
       "\n",
-      "🎯 BrandName Distribution:\n",
-      "  Fabrikam       : 205 ( 69.5%)\n",
-      "  Alpine Ski House:  90 ( 30.5%)\n",
+      "🔗 Merging product data with category names...\n",
+      "✅ Merge completed!\n",
+      "📊 Original products: 315\n",
+      "📊 Enriched products: 315\n",
+      "🔍 Columns after merge: ['ProductID', 'Name', 'Color', 'StandardCost', 'ListPrice', 'Size', 'Weight', 'CategoryID', 'CategoryName']\n",
       "\n",
-      "🎯 CreatedDate Range:\n",
-      "  Earliest: 2020-01-01\n",
-      "  Latest  : 2020-12-30\n",
-      "\n",
-      "🎯 SellStartDate Range:\n",
-      "  Earliest: 2020-02-09\n",
-      "  Latest  : 2021-09-27\n",
-      "  Invalid dates (SellStart <= Created): 2\n",
-      "\n",
-      "🎯 SellEndDate Distribution:\n",
-      "  Discontinued:  11 (  3.7%)\n",
-      "  Active      : 284 ( 96.3%)\n",
-      "  End Date Range: 2022-01-14 to 2023-03-11\n",
-      "\n",
-      "📋 First 10 Sample Records:\n",
-      "ProductId ProductName        BrandName CreatedDate SellStartDate SellEndDate\n",
-      "    P-001   Product 1         Fabrikam  2020-09-20    2021-05-17            \n",
-      "    P-002   Product 2 Alpine Ski House  2020-02-22    2021-09-01            \n",
-      "    P-003   Product 3 Alpine Ski House  2020-02-29    2021-08-28            \n",
-      "    P-004   Product 4         Fabrikam  2020-04-17    2020-12-25            \n",
-      "    P-005   Product 5         Fabrikam  2020-01-05    2021-01-28            \n",
-      "    P-006   Product 6         Fabrikam  2020-04-12    2020-12-23            \n",
-      "    P-007   Product 7         Fabrikam  2020-07-14    2021-01-26            \n",
-      "    P-008   Product 8 Alpine Ski House  2020-09-18    2021-07-17            \n",
-      "    P-009   Product 9         Fabrikam  2020-12-30    2021-01-08            \n",
-      "    P-010  Product 10 Alpine Ski House  2020-12-15    2021-09-26            \n",
-      "\n",
-      "💾 SAVED TO: C:\\temp\\samples\\Product_samples.csv\n",
-      "📊 Total Records: 295\n",
-      "📈 Columns: ProductId, ProductName, BrandName, CreatedDate, SellStartDate, SellEndDate\n",
-      "\n",
-      "✅ Product sample data generation complete!\n"
+      "📖 Sample Enriched Data (First 10 rows):\n",
+      "   CategoryID CategoryName  ProductID                        Name  Color\n",
+      "0          18  Road Frames          1   HL Road Frame - Black, 58  Black\n",
+      "1          18  Road Frames          2     HL Road Frame - Red, 58    Red\n",
+      "2          35      Helmets          3       Sport-100 Helmet, Red    Red\n",
+      "3          35      Helmets          4     Sport-100 Helmet, Black  Black\n",
+      "4          27        Socks          5      Mountain Bike Socks, M  White\n",
+      "5          27        Socks          6      Mountain Bike Socks, L  White\n",
+      "6          35      Helmets          7      Sport-100 Helmet, Blue   Blue\n",
+      "7          23         Caps          8                AWC Logo Cap  Multi\n",
+      "8          25      Jerseys          9  Long-Sleeve Logo Jersey, S  Multi\n",
+      "9          25      Jerseys         10  Long-Sleeve Logo Jersey, M  Multi\n"
      ]
     }
    ],
@@ -170,13 +207,14 @@
     "# Check for CategoryName column in category file\n",
     "category_name_col = None\n",
     "for col in df_categories.columns:\n",
-    "    if 'categoryname' in col.lower() or 'category_name' in col.lower() or 'name' in col.lower():\n",
+    "    if 'categoryname' in col.lower() or 'category_name' in col.lower():\n",
     "        category_name_col = col\n",
     "        break\n",
     "\n",
     "if category_name_col is None:\n",
     "    print(\"❌ CategoryName column not found in ProductCategory_48.csv\")\n",
     "    print(f\"Available columns: {list(df_categories.columns)}\")\n",
+    "    print(\"Looking for columns containing 'categoryname' or 'category_name'\")\n",
     "    # Try to use second column if it exists\n",
     "    if len(df_categories.columns) >= 2:\n",
     "        category_name_col = df_categories.columns[1]\n",
@@ -186,6 +224,9 @@
     "\n",
     "print(f\"✅ Using CategoryID for lookup\")\n",
     "print(f\"✅ Using '{category_name_col}' as CategoryName\")\n",
+    "\n",
+    "# Perform left join to add CategoryName to products\n",
+    "print(f\"\\n🔗 Merging product data with category names...\")\n",
     "\n",
     "# Before merge - check for missing CategoryIDs\n",
     "product_categories = set(df_products['CategoryID'].dropna())\n",
@@ -197,14 +238,13 @@
     "    print(f\"   Missing: {sorted(list(missing_categories))}\")\n",
     "\n",
     "# Perform the merge\n",
-    "print(f\"\\n🔗 Merging product data with category names...\")\n",
     "df_enriched = df_products.merge(\n",
     "    df_categories[['CategoryID', category_name_col]], \n",
     "    on='CategoryID', \n",
     "    how='left'\n",
     ")\n",
     "\n",
-    "# Rename the category name column to standard name if needed\n",
+    "# Rename the category name column to standard name\n",
     "if category_name_col != 'CategoryName':\n",
     "    df_enriched = df_enriched.rename(columns={category_name_col: 'CategoryName'})\n",
     "\n",
@@ -212,7 +252,10 @@
     "print(f\"📊 Original products: {len(df_products)}\")\n",
     "print(f\"📊 Enriched products: {len(df_enriched)}\")\n",
     "\n",
-    "# Check for null CategoryNames\n",
+    "# Debug: Show columns after merge\n",
+    "print(f\"🔍 Columns after merge: {list(df_enriched.columns)}\")\n",
+    "\n",
+    "# Check for null CategoryNames (products without matching categories)\n",
     "null_category_names = df_enriched['CategoryName'].isnull().sum()\n",
     "if null_category_names > 0:\n",
     "    print(f\"⚠️  Warning: {null_category_names} products have null CategoryName\")\n",
@@ -224,10 +267,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f1f4829",
+   "execution_count": 10,
+   "id": "59f27c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "💾 SAVING ENRICHED PRODUCT DATA\n",
+      "==================================================\n",
+      "✅ Enriched data saved to: C:\\temp\\samples\\Product_Samples.csv\n",
+      "📊 Total records: 315\n",
+      "📈 Total columns: 9\n",
+      "\n",
+      "📊 ENRICHMENT SUMMARY\n",
+      "==============================\n",
+      "Original products: 315\n",
+      "Category lookup entries: 48\n",
+      "Final enriched products: 315\n",
+      "\n",
+      "🎯 Category Distribution:\n",
+      "CategoryName\n",
+      "Road Bikes         43\n",
+      "Road Frames        33\n",
+      "Mountain Bikes     32\n",
+      "Mountain Frames    28\n",
+      "Touring Bikes      22\n",
+      "Touring Frames     18\n",
+      "Wheels             14\n",
+      "Tires and Tubes    11\n",
+      "Saddles             9\n",
+      "Jerseys             8\n",
+      "Name: count, dtype: int64\n",
+      "... and 34 more categories\n",
+      "\n",
+      "🔍 Data Quality Check:\n",
+      "Products with CategoryName: 315\n",
+      "Products missing CategoryName: 0\n",
+      "\n",
+      "📋 Final Column List:\n",
+      "Columns: ProductID, Name, Color, StandardCost, ListPrice, Size, Weight, CategoryID, CategoryName\n",
+      "\n",
+      "✅ Product enrichment complete!\n",
+      "📁 Output file: C:\\temp\\samples\\Product_Samples.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Save enriched data and display summary\n",
     "print(\"\\n💾 SAVING ENRICHED PRODUCT DATA\")\n",
