--- a/src/notebooks/data/Generate_Street_Addresses.ipynb
+++ b/src/notebooks/data/Generate_Street_Addresses.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "2ee0c7a8",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🗑️ Removed existing file: C:\\temp\\samples\\StreetAddress_samples.csv\n",
       "🎯 GENERATING STREET ADDRESS SAMPLE DATA\n",
       "Sample Size: 513\n",
       "Output: C:\\temp\\samples\\StreetAddress_samples.csv\n",
@@ -44,7 +43,7 @@
     }
    ],
    "source": [
-    "# filepath: c:\\Repos\\Code\\SampleDataPrep\\src\\notebooks\\data\\GenerateStreetAddress.ipynb\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
@@ -78,6 +77,10 @@
     "def generate_location_id(num_records):\n",
     "    \"\"\"Generate sequential LocationId\"\"\"\n",
     "    return [f\"LOC-{i+1:03d}\" for i in range(num_records)]\n",
+    "\n",
+    "def generate_customer_id(num_records):\n",
+    "    \"\"\"Generate sequential CustomerId\"\"\"\n",
+    "    return [f\"CID-{i+1:03d}\" for i in range(num_records)]\n",
     "\n",
     "def generate_location_name():\n",
     "    \"\"\"Generate static LocationName\"\"\"\n",
@@ -193,6 +196,7 @@
     "\n",
     "# Generate all fields\n",
     "location_ids = generate_location_id(SAMPLE_SIZE)\n",
+    "customer_ids = generate_customer_id(SAMPLE_SIZE)\n",
     "full_addresses, location_names, address_line1, address_line2, cities, states, regions, zip_codes = generate_street_addresses(SAMPLE_SIZE)\n",
     "\n",
     "# Generate some location coordinates (fake but realistic for US)\n",
@@ -228,6 +232,7 @@
     "# Create DataFrame\n",
     "df = pd.DataFrame({\n",
     "    'LocationId': location_ids,\n",
+    "    'CustomerId': customer_ids,\n",
     "    'LocationName': location_names,\n",
     "    'IsActive': is_active_values,  # 99.5% True, 0.5% False\n",
     "    'AddressLine1': address_line1,\n",
@@ -249,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "a4953b3c",
    "metadata": {},
    "outputs": [
@@ -338,7 +343,7 @@
       "\n",
       "💾 SAVED TO: C:\\temp\\samples\\StreetAddress_samples.csv\n",
       "📊 Total Records: 513\n",
-      "📈 Columns: LocationId, LocationName, IsActive, AddressLine1, AddressLine2, City, StateId, ZipCode, CountryId, SubdivisionName, Region, Latitude, Longitude, Note\n",
+      "📈 Columns: LocationId, CustomerId, LocationName, IsActive, AddressLine1, AddressLine2, City, StateId, ZipCode, CountryId, SubdivisionName, Region, Latitude, Longitude, Note\n",
       "\n",
       "✅ Street address sample data generation complete!\n",
       "🔒 All addresses are compliance-approved fake addresses!\n"
