--- a/src/notebooks/schema/Customer_Product_Order_Simplified_12.ipynb
+++ b/src/notebooks/schema/Customer_Product_Order_Simplified_12.ipynb
@@ -5,30 +5,12 @@
    "id": "b34be4c4",
    "metadata": {},
    "source": [
-    "# Retail Data Model - Simplified & Enhanced\n",
-    "\n",
-    "## Overview\n",
-    "This notebook contains the simplified retail data model, reduced from 64 tables to 12 tables while maintaining all essential retail functionality.\n",
-    "\n",
-    "## Key Achievements\n",
-    "- **81% complexity reduction**: From 64 to 12 tables\n",
-    "- **Industry-aligned naming**: Standard retail terminology\n",
-    "- **Fabric Lakehouse optimized**: Delta tables without unnecessary constraints\n",
-    "- **Complete audit trail**: CreatedBy/UpdatedBy fields on key entities\n",
-    "- **Soft delete capability**: IsActive flags where appropriate\n",
+    "# Semantic Model for Customer, Product, and Sales. Finance model in seperate file. \n",
     "\n",
     "## Schema Structure\n",
-    "- **Customer Management**: 7 tables (Customer, Location, Accounts, Relationships)\n",
-    "- **Product Catalog**: 2 tables (Product, Category)\n",
-    "- **Order Processing**: 3 tables (Order, OrderLine, OrderPayment)\n",
-    "\n",
-    "## Business Value\n",
-    "- Faster development with simplified schema\n",
-    "- Lower maintenance costs\n",
-    "- Better performance on modern data platforms\n",
-    "- Enterprise-ready for retail operations\n",
-    "\n",
-    "---"
+    "- **Customer Management (7 tables)**: Customer, CustomerTradeName, CustomerRelationshipType, Location, CustomerLocation, CustomerAccount, CustomerAccountLocation\n",
+    "- **Product Catalog (2 tables)**: Product, Category\n",
+    "- **Order Processing (3 tables)**: Order, OrderLine, OrderPayment\n"
    ]
   },
   {
@@ -61,7 +43,7 @@
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Customer (\n",
     "    CustomerId STRING,\n",
-    "    CustomerTypeId STRING,\n",
+    "    CustomerTypeId STRING, --Individual, Business, Government\n",
     "    IsActive BOOLEAN,\n",
     "    CustomerNamePrefix STRING,\n",
     "    FirstName STRING,\n",
@@ -88,7 +70,8 @@
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerTradeName (\n",
     "    CustomerId STRING,\n",
-    "    TradeNameId STRING,\n",
+    "    CustomerTypeId STRING, --Individual, Business, Government\n",
+    "    TradeNameId STRING,   \n",
     "    PeriodStartDate DATE,\n",
     "    PeriodEndDate DATE,\n",
     "    CustomerTradeNameNote STRING\n",
@@ -101,7 +84,7 @@
     "# 3. Create CustomerRelationshipType table\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerRelationshipType (\n",
-    "    CustomerRelationshipTypeId STRING,\n",
+    "    CustomerRelationshipTypeId STRING,  -- Individual: Standard, Premium, VIP. Business: SMB, Premier, Partner. Government: Federal, State, Local.\n",
     "    CustomerRelationshipTypeName STRING,\n",
     "    CustomerRelationshipTypeDescription STRING\n",
     ")\n",
@@ -152,14 +135,7 @@
     "    CustomerAccountId STRING,\n",
     "    ParentAccountId STRING,\n",
     "    CustomerAccountName STRING,\n",
-    "    CustomerAccountTypeId STRING,\n",
-    "    CustomerAccountOpenedDate DATE,\n",
-    "    CustomerAccountClosedDate DATE,\n",
-    "    CustomerAccountApplicationNumber STRING,\n",
     "    CustomerId STRING,\n",
-    "    ResponsibilityCenterId STRING,\n",
-    "    LedgerId STRING,\n",
-    "    LedgerAccountNumber STRING,\n",
     "    IsoCurrencyCode STRING\n",
     ")\n",
     "USING DELTA\n",
